Use tag version number in footer

--- a/content/layouts/master.html
+++ b/content/layouts/master.html
@@ -10,7 +10,7 @@
   <footer>
     <p>Copyright &copy; 2008&ndash;<%= Time.now.year %> Phillip Ridlen.</p>
     <aside>
-      Version <span class="revision"><%= site_version %></span>
+      Version <%= site_version %>
     </aside>
   </footer>
 </div>
