--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -8,7 +8,7 @@ $secondary-accent-color: #ab6788;
 $tertiary-accent-color: #c5388c;
 
 $primary-background-color: #ffffff;
-$dim-background-color: #fbfaff;
+$dim-background-color: #f4f3f7;
 
 $serif: Georgia, serif;
 $sans-serif: "DM Sans", Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
