--- a/content/css/photos.scss
+++ b/content/css/photos.scss
@@ -29,6 +29,7 @@
     margin-top: 0.5rem;
     padding: 1rem;
     background-color: $dim-background-color;
+    border-radius: 0.25rem;
     color: $dim-text-color;
     font-family: $sans-serif;
     font-size: 0.8rem;
