--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -3,7 +3,7 @@ $dim-text-color: #716d7e;
 $pale-text-color: #afabba;
 $faded-text-color: #eeedeb;
 
-$primary-accent-color: #39c4b2;
+$primary-accent-color: #2e9ea0;
 $secondary-accent-color: #ab6788;
 $tertiary-accent-color: #c5388c;
 
