--- a/content/layouts/category.html
+++ b/content/layouts/category.html
@@ -1,4 +1,4 @@
-<% render "/default.html", layout_styles: ["posts/list"] do %>
+<% render "/default.html" do %>
   <h1 id="notes"><%= @item[:name] %> Posts</h1>
 
   <section class="posts">
