--- a/content/layouts/default.html
+++ b/content/layouts/default.html
@@ -1,3 +1,3 @@
-<% render "/master.html", layout_styles: @layout_styles, body_classes: body_classes do %>
+<% render "/master.html", body_classes: body_classes do %>
   <%= yield %>
 <% end %>
