--- a/content/layouts/master.html
+++ b/content/layouts/master.html
@@ -1,4 +1,4 @@
-<% render "/bare.html", layout_styles: @layout_styles do %>
+<% render "/bare.html" do %>
 <div class="container <%= @body_classes&.join(" ") %>">
   <h1 class="brand">
     <a href="/">Phillip Ridlen</a>
