--- a/content/css/_posts.scss
+++ b/content/css/_posts.scss
@@ -1,4 +1,7 @@
 @import "shared";
+@import "posts/image";
+@import "posts/journal";
+@import "posts/list";
 
 .post-title {
   font-size: 1.75rem;
@@ -8,7 +11,6 @@
 
   @media screen and (min-width: $breakpoint-medium) {
     font-size: 2.5rem;
-    max-width: 75%;
   }
 }
 
@@ -19,7 +21,6 @@
 
   @media screen and (min-width: $breakpoint-medium) {
     font-size: 1.5rem;
-    max-width: 75%;
   }
 }
 
