--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -12,7 +12,7 @@ $dim-background-color: #f4f3f7;
 
 $serif: Georgia, serif;
 $sans-serif: "DM Sans", Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-$monospace: "Source Code Pro", "SF Mono", Consolas, Menlo, monospace;
+$monospace: ui-monospace, Consolas, Menlo, monospace;
 
 $font-size-base-px: 15px;
 $font-size-base: 1rem;
