--- a/content/layouts/photo.html
+++ b/content/layouts/photo.html
@@ -1,4 +1,4 @@
-<% render "/default.html", layout_styles: ["posts", "photos"] do %>
+<% render "/default.html" do %>
   <div class="photo">
     <h1 class="post-title header-link"><%= link_to @item[:title], @item.path %></h1>
     <div class="post-date">
