--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -8,10 +8,9 @@ description: "I'm a software engineer weaving code in Texas."
     .intro
       :markdown
         Hi, there! This is my website. I'm a follower of Christ, husband to my
-        beautiful wife, and father to [three][b] [wonderful][h] [kids][l]. I
-        make a living as a software engineer, solving business problems
-        (sometimes with software). I've also taken a few [photos] that I'm proud
-        of.
+        beautiful wife, and father to three wonderful kids. I make a living as a
+        software engineer, solving business problems (sometimes with software).
+        I've also taken a few [photos] that I'm proud of.
 
         If you're wondering what I'm currently up to, visit my [now page][now].
 
@@ -20,9 +19,6 @@ description: "I'm a software engineer weaving code in Texas."
         not necessarily reflect those of my employer, church, or even my current
         beliefs and values.
 
-        [b]: http://bennettalexander.co
-        [h]: http://hudsonkruse.co
-        [l]: http://legacyrose.co
         [notes]: /notes/
         [now]: /now/
         [photos]: /photos/
