Remove link to notes from index page

--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -14,17 +14,10 @@ description: "I'm a software engineer weaving code in Texas."
 
         If you're wondering what I'm currently up to, visit my [now page][now].
 
-        Every once in a great while, I get the itch to [write a note][notes] on
-        topics that I care about. Any opinions recorded here are my own and do
-        not necessarily reflect those of my employer, church, or even my current
-        beliefs and values.
-
-        [notes]: /notes/
         [now]: /now/
         [photos]: /photos/
 
 :markdown
   ---
 
-  I try to respond to email within 48 hours. Feel free to get in touch
-  directly: <#{site_config.email}>.
+  Feel free to get in touch directly: <#{site_config.email}>.
