--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -10,9 +10,9 @@ $tertiary-accent-color: #c5388c;
 $primary-background-color: #ffffff;
 $dim-background-color: #f4f3f7;
 
-$serif: Georgia, serif;
-$sans-serif: "DM Sans", Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-$monospace: "Source Code Pro", "SF Mono", Consolas, Menlo, monospace;
+$serif: "Times New Roman", serif;
+$sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+$monospace: Menlo, Monaco, monospace;
 
 $font-size-base-px: 15px;
 $font-size-base: 1rem;
