--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -7,7 +7,7 @@ description: "I'm a software engineer weaving code in Texas."
   %section#about.text
     .intro
       :markdown
-        Hi, there! This is my website. I'm a follower of Christ, husband to my
+        Hi, there! This is my website. I'm a Christian, husband to my
         beautiful wife, and father to three wonderful kids. I make a living as a
         software engineer, solving business problems (sometimes with software).
         I've also taken a few [photos] that I'm proud of.
