--- a/src/css/home.css
+++ b/src/css/home.css
@@ -9,7 +9,7 @@
   }
 }
 
-.home-column h2 {
+.home-column h3 {
   margin-top: 0;
 }
 
@@ -22,4 +22,17 @@
 .view-more {
   text-align: right;
   font-size: 0.8rem;
+}
+
+.home-column .photos {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  line-height: 0;
+
+  &:hover .photo {
+    opacity: 0.8;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
