Change icon based on link source

--- a/src/pages/index.haml
+++ b/src/pages/index.haml
@@ -55,7 +55,9 @@ styles:
     %ul.posts-list
       - links_sorted_by_date.first(5).each do |link|
         %li
-          ★&nbsp;
+          %span
+            != link_icon(link)
+            &nbsp;
           %a{href: link[:url]}= link[:title]
     %p.view-more
       != link_to "View more →", "/links"
