feat: Swap emerald and raspberry

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,9 +20,9 @@
   --faded-text-color: var(--mauve-50);
   --letterpress-highlight-color: white;
 
-  --primary-accent-color: var(--emerald);
+  --primary-accent-color: var(--raspberry);
   --secondary-accent-color: var(--light-pink);
-  --tertiary-accent-color: var(--raspberry);
+  --tertiary-accent-color: var(--emerald);
 
   --primary-background-color: white;
   --dim-background-color: var(--dark-white);
