post(journal): wanting back what we can never have

--- a/src/css/posts/journal.css
+++ b/src/css/posts/journal.css
@@ -15,6 +15,13 @@
   h3 {
     font-family: var(--sans-serif);
   }
+
+  aside,
+  .footnotes {
+    color: var(--dim-text-color);
+    font-family: var(--sans-serif);
+    font-size: 1rem;
+  }
 }
 
 .post-title {
