--- a/src/layouts/category.html
+++ b/src/layouts/category.html
@@ -7,9 +7,9 @@
         <li>
           <%= link_to post.attributes[:title], post %>
           <aside>
-            <time datetime="<%= post[:date].strftime("%Y-%m-%d") %>"
-                  title="<%= post[:date].strftime("%A, %B %-d, %Y") %>">
-              <%= post[:date].year %>
+            <time datetime="<%= post_date(post).strftime("%Y-%m-%d") %>"
+                  title="<%= post_date(post).strftime("%A, %B %-d, %Y") %>">
+              <%= post_date(post).year %>
             </time>
           </aside>
         </li>
