--- a/src/layouts/post/date.html
+++ b/src/layouts/post/date.html
@@ -1,6 +1,6 @@
 <div class="post-date">
-  <time datetime="<%= @item[:date].strftime("%Y-%m-%d") %>">
-    <%= link_to @item[:date].strftime("%A, %B %d, %Y"), @item, class: "post-permalink" %>
-    <%= @item[:modified] ? "(Updated #{@item[:modified].strftime("%B %d, %Y")})" : nil %>
+  <time datetime="<%= post_date(@item).strftime("%Y-%m-%d") %>">
+    <%= link_to post_date(@item).strftime("%A, %B %d, %Y"), @item, class: "post-permalink" %>
+    <%= post_modified_date(@item) ? "(Updated #{post_modified_date(@item).strftime("%B %d, %Y")})" : nil %>
   </time>
 </div>
