--- a/src/css/posts/image.css
+++ b/src/css/posts/image.css
@@ -1,5 +1,6 @@
 .post-content {
-  img {
+  img,
+  video {
     height: auto;
     width: 100%;
 
@@ -12,7 +13,7 @@
     color: var(--dim-text-color);
     font-family: var(--sans-serif);
     font-size: 1rem;
-    margin-top: -1rem;
+    margin-top: 0.5rem;
     text-align: center;
   }
 }
