docs: refresh homepage and now page copy

--- a/src/pages/index.haml
+++ b/src/pages/index.haml
@@ -10,10 +10,10 @@ styles:
   %section#about.text
     .intro
       :markdown
-        Hi, there! This is my website. I'm a Christian, husband to my
+        Hi there! This is my website. I'm a Christian, husband to my
         beautiful wife, and father to three wonderful kids. I make a living as a
         software engineer, solving business problems (sometimes with software).
-        I've also taken a few [photos] that I'm proud of.
+        I've also taken a few [photos] I'm proud of.
 
         If you're wondering what I'm currently up to, visit my [now page][now].
 
@@ -64,5 +64,4 @@ styles:
 :markdown
   ---
 
-  Feel free to get in touch directly: <#{site_config.email}>.
-
+  Feel free to get in touch: <#{site_config.email}>.
