fix: repair links page front matter

--- a/src/pages/links.haml
+++ b/src/pages/links.haml
@@ -1,6 +1,6 @@
 ---
 layout: master
-description: Interesting links from around the web."
+description: "Interesting links from around the web."
 styles:
   - posts/list
 ---
@@ -25,4 +25,3 @@ styles:
           •
           %time{datetime: date.iso8601, title: date.strftime("%A, %B %-d, %Y at %H:%M:%S %p")}
             = date.strftime("%Y-%m-%d")
-
