--- a/src/pages/notes.haml
+++ b/src/pages/notes.haml
@@ -1,6 +1,6 @@
 ---
 layout: master
-description: "Occasional links and articles from Phillip Ridlen."
+description: "Occasional notes and articles from Phillip Ridlen."
 styles:
   - posts/list
 ---
