feat: add site proxies

--- a/src/pages/_redirects.erb
+++ b/src/pages/_redirects.erb
@@ -42,3 +42,6 @@ https://www.phillipridlen.com/* https://ptx.sh/:splat 301!
 /christianity/:year/:month/:day/:slug /notes/christianity/:year/:month/:day/:slug 301
 /programming/:year/:month/:day/:slug /notes/programming/:year/:month/:day/:slug 301
 /technology/:year/:month/:day/:slug /notes/technology/:year/:month/:day/:slug 301
+
+# Proxied sites
+/catechism/* https://apologetics-catechism.netlify.app/:splat 200
