--- a/src/pages/_redirects.erb
+++ b/src/pages/_redirects.erb
@@ -43,5 +43,6 @@ https://www.phillipridlen.com/* https://ptx.sh/:splat 301!
 /programming/:year/:month/:day/:slug /notes/programming/:year/:month/:day/:slug 301
 /technology/:year/:month/:day/:slug /notes/technology/:year/:month/:day/:slug 301
 
-# Proxied sites
+# Proxied Sites
+/catechism /catechism/ 301
 /catechism/* https://apologetics-catechism.netlify.app/:splat 200
