--- a/src/pages/_redirects.erb
+++ b/src/pages/_redirects.erb
@@ -44,5 +44,4 @@ https://www.phillipridlen.com/* https://ptx.sh/:splat 301!
 /technology/:year/:month/:day/:slug /notes/technology/:year/:month/:day/:slug 301
 
 # Proxied Sites
-/catechism /catechism/ 301
-/catechism/* https://apologetics-catechism.netlify.app/:splat 200
+/catechism* https://apologetics-catechism.netlify.app/:splat 200
