Add recipes to proxied sites

--- a/src/pages/_redirects.erb
+++ b/src/pages/_redirects.erb
@@ -44,4 +44,6 @@ https://www.phillipridlen.com/* https://ptx.sh/:splat 301!
 /technology/:year/:month/:day/:slug /notes/technology/:year/:month/:day/:slug 301
 
 # Proxied Sites
-/catechism* https://apologetics-catechism.netlify.app/:splat 200
+/catechism/* https://apologetics-catechism.netlify.app/:splat 200
+/recipes/* https://philtr-recipes.netlify.app/:splat 200
+
